# minecphr-python

./: pyproject.toml
minecphr/: __main__.py  test_transport.py  transport.py
