[tool.poetry]
name = "minecphr"
version = "0.1.0"
description = "cryptography as a form of protest #saveminecraft"
authors = ["FlightlessB <flightlessb@protonmail.com>"]
license = "0BSD"

[tool.poetry.dependencies]
python = "^3.9"
pysodium = "^0.7.12"
bech32 = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
hypothesis = "^6.52.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
